ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing  
    alb.ingress.kubernetes.io/target-type: ip  
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]' 
    #alb.ingress.kubernetes.io/subnets: subnet-0be737662e7a08581,subnet-0e87807debc1f1945

spec:
  ingressClassName: alb
  rules:
    - host: food.jonathanjo.great-site.net  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: backend-service
                port:
                  number: 4000
    - host: get.jonathanjo.great-site.net 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5173
